...
        BottomNavigationBarItem(
          key: Key('projectLibrariesBottomNavigationBarItem'),
          icon: Icon(Icons.folder_rounded),
          label: 'Project Libraries'
        ),
        BottomNavigationBarItem(
          key: Key('boulderingWallsBottomNavigationBarItem'),
          icon: Icon(Icons.corporate_fare_rounded),
          label: 'Bouldering Walls'
        ),                
      ]
    );
  }
...
