...
import 'package:climbmetrics/viewmodels/bouldering_wall/bouldering_wall_provider.dart';
import 'package:flutter/material.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';

class BoulderingWallSearchResultView extends ConsumerStatefulWidget {
  
  const BoulderingWallSearchResultView({super.key});

  @override
  ConsumerState<BoulderingWallSearchResultView> createState() => _BoulderingWallSearchResultViewState();

}

...
